2003-01-06  Martin Weber <martweb@gmx.net>

	* output-pstoedit.h: Don't include pstoedit/pstoedll.h.

2003-01-06  Martin Weber <martweb@gmx.net>

 	* output.c: removed heap corruption when using pstoedit.

2002-12-18  Martin Weber <martweb@gmx.net>

 	* autotrace.c: fixed problem that , is used instead of . in ouput when
	 using German locale.

2002-12-19  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c: Likewise.

	* configure.in: Don't use VERSION. This symbol is 
	reserved by VC++. Instead AUTOTRACE_VERSION is used.

2002-11-16  Martin Weber <martweb@gmx.net>

	* despeckle.c: removed unnecessary for loop.

2002-11-16  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_la_SOURCES): added intl.h
	(AM_CPPFLAGS): added locale dir.
	(autotrace_LDADD): added INTLLIBS.
	(ACLOCAL_AMFLAGS): Added -I m4.

	* acconfig.h: added PACKAGE and VERSION.

	* autotrace.c (autotrace_init): New function.
	(at_fitting_opts_doc_func): New function.

	* autotrace.h (autotrace_init): New function.
	(at_fitting_opts_doc): call at_fitting_opts_doc_func.
	(at_fitting_opts_doc_func): New function.

	* configure.in: remove AUTOTRACE_ prefix from version
	number related variable names.
	use DEFINE_UNQOTED macro instead of SUBST marco.
	(AM_GNU_GETTEXT): Gettextiz'ed.
	(AC_OUTPUT): intl/Makefile and po/Makefile.in are added.
	
	* main.c: include intl.h and locale.h.
	(main): set locale.
	put _() to C strings.

2002-11-15  Martin Weber <martweb@gmx.net>

	* autotrace.c, fit.c, input-tga.c,
	output-cgm.c, output-dr2d.c, output-dxf.c,
	output-fig.c, outputp2e.c, pxl-outline.c:
	Fixed compilation errors and warnings for certain C compilers.

	* output-pstoedit.h: Fixed compilation errors with Visual C++.

	* output.c: Removed unnecessary streq.

2002-11-15  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (enum _at_msg_type): Added
	AT_MSG_NOT_SET.

	* exception.c (at_exception_got_fatal): 
	return true or false explicitly.
	(at_exception_new): Don't use GCC C extension.
