@@ -415,8 +415,8 @@ void            at_color_free  (at_color_type * color);
 at_input_read_func at_input_get_handler (at_string filename);
 at_input_read_func at_input_get_handler_by_suffix (at_string suffix);
 
-char ** at_input_list_new (void);
-void at_input_list_free(char ** list);
+const char ** at_input_list_new (void);
+void at_input_list_free(const char ** list);
 
 /* at_input_shortlist
    return value: Do free by yourself */
