@@ -1,3 +1,11 @@
+2003-01-08  Martin Weber  <martweb@gmx.net>
+
+	 * input.c, output.c, autotrace.h: compiler warnings for new ImageMagick
+	versions removed.
+
+	 * autotrace.dsp, autotrace.vcproj: Adopted project files for new
+	ImageMagick and new pstoedit release.
+
 2003-01-06  Martin Weber <martweb@gmx.net>
 
 	* output-pstoedit.h: Don't include pstoedit/pstoedll.h.
